--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   mocktail: ^1.0.0
   equatable: ^2.0.0
+  dio: ^5.3.2
+  get_it: ^7.6.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
