--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,6 +16,8 @@ dependencies:
   dio: ^5.3.2
   get_it: ^7.6.0
   cupertino_icons: ^1.0.2
+  google_fonts: ^6.0.0
+  
 
 dev_dependencies:
   flutter_test:
